modules/gdscript/tests/scripts/analyzer/errors/assign_signal.gd
signal your_base
signal my_base
func test():
	your_base = my_base
